RESOLVED FIXED166465
Enhance LLInt tracing to dump the codeBlock signature instead of just a pointer where appropriate.
https://bugs.webkit.org/show_bug.cgi?id=166465
Summary Enhance LLInt tracing to dump the codeBlock signature instead of just a point...
Mark Lam
Reported 2016-12-23 10:44:47 PST
Patch coming.
Attachments
proposed patch. (2.63 KB, patch)
2016-12-23 10:47 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-12-23 10:47:16 PST
Created attachment 297715 [details] proposed patch.
Keith Miller
Comment 2 2016-12-23 10:50:03 PST
Comment on attachment 297715 [details] proposed patch. r=me.
WebKit Commit Bot
Comment 3 2016-12-23 11:27:05 PST
Comment on attachment 297715 [details] proposed patch. Clearing flags on attachment: 297715 Committed r210138: <http://trac.webkit.org/changeset/210138>
WebKit Commit Bot
Comment 4 2016-12-23 11:27:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.