Enhance LLInt tracing to dump the codeBlock signature instead of just a pointer where appropriate. https://bugs.webkit.org/show_bug.cgi?id=166465

Reviewed by Keith Miller.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
(JSC::LLInt::traceFunctionPrologue):


Canonical link: https://commits.webkit.org/183742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210138 268f45cc-cd09-0410-ab3c-d52691b4dbfc